Added initial admin dashboard to approve instructor requests from users, restricted some URLs to roles, sent email to user after approving instructor request